# QtDicomViewer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  mainwindow.h
src/: CMakeLists.txt  main.cpp
src/core/: segmentation.cpp  segmentation.h
src/data/: meshdata.h  slice.cpp  volume.h
src/io/: dicomloader.cpp  dicomloader.h
src/platform/: mainwindow.h
src/ui/: mainwindow.ui
src/utils/: MathUtils.h  tables.h
test/: CMakeLists.txt  DicomLoaderTest.cpp  SegmentationTest.cpp
test/test_data/valid_series/: cbct_001.dcm  cbct_002.dcm  cbct_003.dcm  cbct_004.dcm  cbct_005.dcm  cbct_006.dcm
